# journal-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.chromadb  README.md  docker-compose.dev.yml  docker-compose.yml  project-brief.md  pyproject.toml
.engineering-team/: chunking-implementation-plan.md  deployment-readiness-report.md  evaluation-report.md  improvement-plan.md
.github/: dependabot.yml
config/: entity-casing-exceptions.toml  mood-dimensions.toml
deploy/: docker-compose.prod.yml
docs/: api.md  architecture.md  audit-2026-05-09.md  auth.md  code-quality-principles.md  code-quality-refactor-plan.md  configuration.md  context-files.md  conversations.md  development.md  entity-tracking.md  entry-date-integrity.md  external-services.md  fitness-followup-plan.md  fitness-integration-plan.md  fitness-multiuser-plan.md  fitness-operations.md  fitness-pipeline.md  fitness-schema.md  fitness-tier-plan.md  fitness-tile-layout-plan.md  jobs.md  mood-scoring.md  ocr-context.md  phase-2-brief.md  production-deployment.md  refactor-follow-ups.md  refactor-item-6-exceptions-plan.md  refactor-mcp-server-plan.md  refactor-repository-plan.md  refactor-round-3.md  roadmap.md  rollout-storylines-0036.md  search.md  security-roadmap.md  security.md  sqlite-per-thread-connections-plan.md  sqlite-threading.md  storylines-2026-05-mcp-and-append.md  storylines-plan.md  (+3 more)
journal/: 260322-ci-cd-docker-workflow.md  260322-initial-implementation.md  260323-deployment-readiness-fixes.md  260409-first-ingestion-and-bugfixes.md  260409-multi-page-entries-and-rest-api.md  260410-backfill-chunk-count.md  260410-delete-entry-endpoint.md  260410-rename-repo-to-journal-server.md  260410-semantic-chunking.md  260411-mood-scoring-backend.md  260411-multipage-chunk-join-fix.md  260412-async-batch-jobs.md  260412-entity-management.md  260412-entry-creation-api.md  260412-image-upload-fixes-date-extraction.md  260413-auto-enrichment-and-list-api-doubts.md  260413-auto-entity-reextraction-on-save.md  260413-verify-doubts-endpoint.md  260414-fix-gemini-model-name.md  260414-gemini-context-support.md  260414-gemini-ocr-provider.md  260414-voice-recording-ingestion.md  260415-rename-source-type-taxonomy.md  260415-security-tier1-data-isolation-session-hashing.md  260420-mood-rationale-entity-distribution.md  260421-fix-mood-scoring-runtime-toggle.md  260422-transcription-confidence-scoring.md  260423-dockerfile-fix-and-pricing-api.md  260423-enrich-ingestion-job-results.md  260423-pushover-notifications.md  260425-compress-pipeline-pushover-notifications.md  260427-edit-pipeline-notification-consolidation.md  (+104 more)
tests/: conftest.py  (+47 more)
(+356 files in other folders)
