[project]
name = "journal"
version = "0.1.0"
description = "Personal journal insight engine — ingest handwritten pages and voice notes, query with natural language"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.107.0,<1",
    "google-genai==1.73.0",
    "openai>=2.41.0,<3",
    "chromadb-client>=1.5.9,<2",
    "mcp[cli]>=1.26,<2",
    "tiktoken>=0.13.0,<1",
    "pysbd>=0.3,<1",
    "python-multipart>=0.0.32",
    "argon2-cffi>=25.1,<26",
    "itsdangerous>=2.2,<3",
    "Pillow>=12.2,<13",
    "pillow-heif>=0.21,<1",
    "stravalib~=2.5",
    "garminconnect==0.3.5",
]

[project.scripts]
journal = "journal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/journal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Strict markers — typos in @pytest.mark.* fail collection rather than
# silently sliding through. Add new markers below before using them.
addopts = "--strict-markers"
markers = [
    "integration: tests that need a real external service (e.g. ChromaDB). Skipped by default; opt in via `pytest -m integration`.",
]

[tool.coverage.run]
source = ["src/journal"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[dependency-groups]
dev = [
    "coverage>=7.14.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]
